--- a/app/assets/stylesheets/_navigation.scss
+++ b/app/assets/stylesheets/_navigation.scss
@@ -81,6 +81,6 @@ nav.main-navigation {
   display: none;
 }
 
-.stack > *:not(.active) {
-  display: none
+.stack > section:not(.active) {
+  display: none;
 }
