--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -15,6 +15,7 @@
 @import "icon_font";
 @import "layout";
 @import "app_bar";
+@import "tabs";
 @import "navigation";
 @import "lists";
 @import "dialogs";
@@ -22,6 +23,7 @@
 @import "datetime";
 @import "forms";
 @import "alerts";
+@import "members";
 
 @import "dashboards";
 @import "groups";
