--- a/app/assets/stylesheets/_forms.scss
+++ b/app/assets/stylesheets/_forms.scss
@@ -1,9 +1,17 @@
 %button {
   @include type-button($base-accent-color);
 
+  i {
+    display: inline-block;
+  }
+
   i:first-child:last-child {
     display: block;
     height: 1em;
+  }
+
+  i::before {
+    display: block;
   }
 }
 
