--- a/app/assets/stylesheets/_lists.scss
+++ b/app/assets/stylesheets/_lists.scss
@@ -33,7 +33,7 @@
 
     .avatar {
       left: 1rem;
-      padding: 0.5rem;
+      padding: 0;
       width: 2.5rem;
       height: 2.5rem;
       margin: -1.25rem 0;
@@ -41,41 +41,40 @@
       background: text-color();
       color: white;
 
-      .icon {
+      i, .icon {
         position: static;
         display: block;
-        margin: 0;
         color: white;
+        padding: 0.5rem;
+        width: 2.5rem;
+        height: 2.5rem;
+        margin: 0;
+
+        &::before {
+          display: block;
+        }
+      }
+
+      img {
+        display: block;
+        width: 100%;
+        height: auto;
+        border-radius: 50%;
+      }
+
+      .letter {
+        width: 2.5rem;
+        height: 2.5rem;
+        line-height: 2.5rem;
+        vertical-align: middle;
+        text-align: center;
+        color: secondary-color(white);
+        // font-weight: $bold-font-weight;
+        font-size: 1.5rem;
       }
     }
 
     .text {
-      .line {
-        @include ellipsis;
-        display: block;
-        line-height: 1.25rem;
-
-        &:first-child { margin-top: 1rem; }
-        &:last-child { margin-bottom: 1rem; }
-
-        &:first-child:last-child {
-          @include type-body-2;
-          line-height: 1rem;
-          margin-bottom: 1.25rem;
-        }
-
-        &:first-child:not(:last-child) {
-          @include type-subhead;
-          line-height: 1.25rem;
-          font-weight: $bold-font-weight;
-        }
-
-        &:not(:first-child) {
-          @include type-body-1;
-          color: secondary-color();
-        }
-      }
-
       &:not(:first-child) {
         margin-left: $keyline;
       }
@@ -101,6 +100,44 @@
       margin: -0.5em 0;
       color: divider-color();
     }
+  }
+
+  .line {
+    @include ellipsis;
+    display: block;
+    line-height: 1.25rem;
+
+    &:first-child { margin-top: 1rem; }
+    &:last-child { margin-bottom: 1rem; }
+
+    &:first-child:last-child {
+      @include type-body-2;
+      line-height: 1rem;
+      margin-bottom: 1.25rem;
+    }
+
+    &:first-child:not(:last-child) {
+      @include type-subhead;
+      line-height: 1.25rem;
+      font-weight: $bold-font-weight;
+    }
+
+    &:not(:first-child) {
+      @include type-body-1;
+      color: secondary-color();
+    }
+  }
+}
+
+.list-heading {
+  margin: 0;
+  padding: 1rem;
+  font-size: 0.875rem;
+  font-weight: $bold-font-weight;
+  color: secondary-color();
+
+  &:first-child {
+    margin-top: -0.5rem;
   }
 }
 
